[Mac][Material Design] Bring bookmark hover background up to spec.

The MD hover background currently does not match the spec.

R=avi@chromium.org
BUG=612598

Review-Url: https://codereview.chromium.org/1988223002
Cr-Commit-Position: refs/heads/master@{#394599}

Former-commit-id: d6bb602b460c9e39739a1e934347d278bd6b501b