chrome/browser/ui/cocoa/bookmarks/bookmark_button_cell_unittest.mm
@@ -12,6 +12,7 @@
 #include "components/bookmarks/browser/bookmark_model.h"
 #include "testing/gtest/include/gtest/gtest.h"
 #include "testing/platform_test.h"
+#include "ui/base/material_design/material_design_controller.h"
 #include "ui/base/resource/resource_bundle.h"
 #include "ui/gfx/image/image.h"
 #include "ui/resources/grit/ui_resources.h"
@@ -201,7 +202,11 @@ TEST_F(BookmarkButtonCellTest, VerticalTextOffset) {
   ASSERT_TRUE(bookmark_cell.get());
 
   EXPECT_EQ(1, [gradient_cell verticalTextOffset]);
-  EXPECT_EQ(0, [bookmark_cell verticalTextOffset]);
+  if (ui::MaterialDesignController::IsModeMaterial()) {
+    EXPECT_EQ(-1, [bookmark_cell verticalTextOffset]);
+  } else {
+    EXPECT_EQ(0, [bookmark_cell verticalTextOffset]);
+  }
 
   EXPECT_NE([bookmark_cell verticalTextOffset],
             [gradient_cell verticalTextOffset]);
